--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ ENV/
 .idea/
 ~*.xlsx
 notebook_idata_lesson01/demo/逻辑回归-信用卡欺诈检测/creditcard.csv
+notebook_idata_lesson01/CreditCard/creditcard.csv
